# 6502-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-test.yml  rust.yml
src/: Bus.rs  CPU.rs  bus.rs  cpu.rs  lib.rs  main.rs  opcodes.rs
src/core/: bus.rs  cpu.rs
src/io/: mod.rs
src/nes/: mod.rs
tests/: addressing.rs  instructions.rs  io.rs  programs.rs
