[package]
name = "mos-6502-emulator"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Jaden Accord <dev@jadenaccord.com>"]
readme = "README.md"
repository = "https://github.com/Jayby18/6502-emulator"
keywords = ["tui", "emulator"]
categories = ["emulator"]
exclude = ["pictures/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
dirs = "5.0.1"
hex = "0.4.3"
mpsc = "0.2.0"
rand = "0.8.5"
ratatui = "0.23.0"
stdr = { git = "https://github.com/Jayby18/stdr", version = "0.1.0" }
thread = "0.1.0"

[dev-dependencies]
dirs = "5.0.1"
